--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1027,6 +1027,7 @@ height: 63%;
     display: block;
     width: 9%;
     position: absolute;
+        padding-top: 6%;
     }
     .button-link button {
         padding: 8px 16px;
