--- a/styles/styles.css
+++ b/styles/styles.css
@@ -370,6 +370,7 @@ p{
     background-repeat: no-repeat;
     position: relative;
 padding-top: 0%;
+    padding-bottom: 1%;
 }
 
   .list::-webkit-scrollbar {
