--- a/styles/styles.css
+++ b/styles/styles.css
@@ -371,6 +371,7 @@ p{
     position: relative;
 padding-top: 0%;
     padding-bottom: 1%;
+    background-position-y: 21%;
 }
 
   .list::-webkit-scrollbar {
