--- a/styles/styles.css
+++ b/styles/styles.css
@@ -29,7 +29,23 @@
     }
 }
 
+@keyframes smileyBouncer {
+    0% {
+        transform: translateY(0);
+    }
+    50% {
+        transform: translateY(-10px);
+    }
+    100% {
+        transform: translateY(0);
+    }
+}
 
+
+
+.web-icon{
+    animation: smileyBouncer 3s linear infinite;
+}
 
 
 
