--- a/styles/styles.css
+++ b/styles/styles.css
@@ -3023,7 +3023,7 @@ width: 85%;
 /*  שחיינים */
 .flex-container-opening-swim{
 
-
+padding-top: 7%;
   padding-bottom: 0%;
   display: flex;
   list-style-type: none;
