--- a/styles/styles.css
+++ b/styles/styles.css
@@ -3189,7 +3189,7 @@ padding-top: 7%;
 
 
 .flex-container-opening-adults{
-
+padding-top: 6%;
     padding-bottom: 0%;
     display: flex;
     list-style-type: none;
