--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1588,6 +1588,7 @@ padding-top: 3%;
     padding-bottom: 2%;
     border-top-left-radius: 20px;
     border-top-right-radius: 20px;
+    color: #000000;
     
   }
 
