--- a/styles/styles.css
+++ b/styles/styles.css
@@ -2282,6 +2282,7 @@ display: none;
     background-size: 110%;
     background-position-x: 96%;
     background-repeat: no-repeat;
+    text-align: center;
     
 }
 
