--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1178,7 +1178,7 @@ width: 29px;
     color: #2f2f2f;
     background-color: #fff;
     border-top: 1px solid #e5e5e5;
-    background: linear-gradient(to bottom, #6DD7F0, #3CC3F2,#118AC3 ); /* Example gradient from left to right */
+  background: linear-gradient(to bottom, #3cc5e9, #3cc5e9, #c9f2ff);
 
   }
   
