--- a/styles/styles.css
+++ b/styles/styles.css
@@ -95,13 +95,13 @@ strong {
    padding: 24px 16px 8px 32px;
     text-decoration: none;
     font-size: 25px;
-    color: #818181;
+    color: #ffffff;
     display: block;
     transition: 0.3s;
 }
 
 .sidenav a:hover {
-    color: rgb(55, 199, 233);
+    color: #37c7e9;
 }
 
 .sidenav .closebtn {
