--- a/styles/styles.css
+++ b/styles/styles.css
@@ -95,7 +95,7 @@ strong {
    padding: 24px 16px 8px 32px;
     text-decoration: none;
     font-size: 25px;
-    color: #ffffff;
+    color: #c7c7c7;
     display: block;
     transition: 0.3s;
 }
