--- a/styles/styles.css
+++ b/styles/styles.css
@@ -507,6 +507,7 @@ transition: opacity 0.8s ease-out, transform 0.8s ease-out;
 
     .content {
       font-size: 32px;
+        text-align: right;
     }
 
     .button {
