--- a/styles/styles.css
+++ b/styles/styles.css
@@ -2894,12 +2894,15 @@ flex: 1 1 30%;
     }
 
     .title {
-      cursor: pointer;
-        padding: 18px;
-        border: none;
-        text-align: center;
-        outline: none;
-        transition: 0.4s;
+font-size: 1rem;
+    cursor: pointer;
+    padding: 11px;
+    padding-top: 8%;
+    border: none;
+    text-align: center;
+    outline: none;
+    transition: 0.4s;
+    font-family: 'Assistant-Light';
     }
 
     .content {
