--- a/styles/styles.css
+++ b/styles/styles.css
@@ -2359,6 +2359,7 @@ display: none;
 .inline-container-kids {
     display: flex;
     justify-content: space-between;
+    
 }
 
 .inline-container-kids .main-text {
@@ -2409,6 +2410,16 @@ color: #751DD5;
 
 
 @media (max-width: 600px) {
+    .inline-container-kids {
+    gap: 4%;
+}
+    .inline-container-kids .main-text {
+   flex: 3;
+    margin: 0px;
+    text-align: right;
+}
+
+
 
 .container-ear-infographic-kid img{
      width: 85%;
