--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1536,6 +1536,7 @@ padding-top: 3%;
     text-align: center;
     padding: 5%;
     text-align:right;
+    font-size: 1rem;
 }
 
 .inline-container{
