--- a/styles/styles.css
+++ b/styles/styles.css
@@ -3128,7 +3128,7 @@ padding-top: 7%;
   gap: 1rem;
   flex-direction: row;
   padding-left: 0;
-  background: linear-gradient(to bottom, #ffffff, #a0e9f2, #37919c);  
+  background: linear-gradient(to bottom, #ffffff, #a0e9f2, #44b1bf);  
   
    
 }
