--- a/styles/styles.css
+++ b/styles/styles.css
@@ -3298,7 +3298,7 @@ padding-top: 6%;
     gap: 1rem;
     flex-direction: row;
     padding-left: 0;
-    background: linear-gradient(to bottom, #ffffff, #c6d4e8, #a6b1c0);
+   background: linear-gradient(to bottom, #ffffff, #effbfe, #becbdd);
     background-position-x: -51%;
     background-repeat: no-repeat;
    
