--- a/styles/styles.css
+++ b/styles/styles.css
@@ -3117,6 +3117,114 @@ width: 85%;
 
 }
 
+
+
+/*  מידע לטסים */
+
+
+.flex-container-info-travel{
+  
+    display: flex;
+    align-items: center;
+    margin-bottom: 10px;
+    background-color: #fff4ea;
+    border-top-left-radius: 17px;
+    border-top-right-radius: 18px;
+}
+
+
+.travel-info-buttons{
+    width: 19%;
+    padding: 6%;
+}
+
+.travel-info-buttons-suitcase{
+    width: 30%;
+    padding: 0%;
+}
+
+
+.container-info-travel{
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    padding: 2%;
+}
+
+.square-travel {
+    width: 30%;
+    box-sizing: border-box;
+    text-align: center;
+    margin: 10px 0;
+    background-color: white;
+    box-shadow: 0 7px 3px rgba(131, 151, 160, 0.5);
+    display: inline-block;
+    border-radius: 18px;
+}
+
+.title {
+    font-size: 1.5rem;
+    margin-bottom: 10px;
+}
+
+.content-travelinfo {
+    display: block;
+    font-size: 1rem;
+    padding: 3%;
+}
+
+@media (max-width: 600px) {
+    .flex-container-info-travel {
+        justify-content: center;
+    }
+    .square-travel {
+        width: 100%;
+        background-color: #fff4ea;
+    }
+
+    .title {
+      cursor: pointer;
+        padding: 18px;
+        border: none;
+        text-align: center;
+        outline: none;
+        transition: 0.4s;
+    }
+
+    .content-travelinfo {
+        font-size: 0.75rem;
+        display: none;
+        transition: max-height 0.5s ease, opacity 0.5s ease; 
+    }
+
+    .travel-info-buttons, .travel-info-buttons-research {
+    display: none;
+    }
+
+    .travel-info-buttons-research {
+        display: none;
+
+    }
+    .travel-info-buttons-suitcase{
+        display: none;
+    }
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 /*  שחיינים */
 .flex-container-opening-swim{
 justify-content: center;
