--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1114,9 +1114,10 @@ width: 29px;
 
     .web-icon {
     display: block;
-    width: 9%;
+    width: 8%;
     position: absolute;
-        padding-top: 6%;
+    padding-top: 6%;
+    margin-right: -4%;
     }
     .button-link button {
         padding: 8px 16px;
