--- a/styles/styles.css
+++ b/styles/styles.css
@@ -2909,6 +2909,7 @@ font-size: 1rem;
     }
 
 .content-parentinfo {
+     text-align: right;
         font-size: 0.75rem;
         display: none;
         background: white;
