--- a/styles/styles.css
+++ b/styles/styles.css
@@ -3183,6 +3183,7 @@ width: 85%;
 
 
     .content-travelinfo {
+        background-color: white;
         font-size: 0.75rem;
         display: none;
         transition: max-height 0.5s ease, opacity 0.5s ease; 
