--- a/styles/styles.css
+++ b/styles/styles.css
@@ -2118,8 +2118,6 @@ display: none;
     text-align: center;
     margin-left: auto;
     margin-right: auto;
-/*     max-width: 72%; */
-
 
 }
 
@@ -2127,7 +2125,78 @@ display: none;
     display: none;
 }
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+.open-popup-btn-earanatomy {
+    display: block;
+    margin: 20px auto;
+    padding: 10px 20px;
+    font-size: 16px;
+    cursor: pointer;
+    background: linear-gradient(180deg, #ADE7FF, #64D8FF, #35C0E8, #2980A7);
+    border-radius: 15%;
+    border: none;
+    color: white;
+    padding: 14px 28px;
+    left: 4%;
+    /* margin-left: -3%; */
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 1.5rem;
+    border-radius: 18px;
+    cursor: pointer;
+    transition: background-color 0.3s ease, transform 0.3s ease;
+}
+
+.popup-container-earanatomy {
+    display: none; 
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5); 
+    justify-content: center;
+    align-items: center;
+}
+
+.popup-earanatomy {
+    background-color: #fff;
+    padding: 20px;
+    border-radius: 10px;
+    height: 85%;
+    position: relative;
+    overflow: auto;
+}
+
+.close-popup-btn-earanatomy {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    background: none;
+    border: none;
+    font-size: 20px;
+    cursor: pointer;
+}
 @media only screen and  (max-width: 600px) {
+    
+.open-popup-btn-earanatomy {
+    display: block;
+}
+
+    
 .viewer-container-introdocs{
     display:none;
 }
