--- a/styles/styles.css
+++ b/styles/styles.css
@@ -2138,7 +2138,7 @@ display: none;
 
 
 
-.open-popup-btn-earanatomy {
+.open-popup-btn-earanatomy, .open-popup-btn-360 {
     display: block;
     margin: 20px auto;
     padding: 10px 20px;
@@ -2159,7 +2159,7 @@ display: none;
     transition: background-color 0.3s ease, transform 0.3s ease;
 }
 
-.popup-container-earanatomy {
+.popup-container-earanatomy, .popup-container-360 {
     display: none; 
     position: fixed;
     top: 0;
@@ -2171,7 +2171,7 @@ display: none;
     align-items: center;
 }
 
-.popup-earanatomy {
+.popup-earanatomy, .popup-360 {
     background-color: #fff;
     padding: 20px;
     border-radius: 10px;
@@ -2180,7 +2180,7 @@ display: none;
     overflow: auto;
 }
 
-.close-popup-btn-earanatomy {
+.close-popup-btn-earanatomy, .close-popup-btn-360 {
     position: absolute;
     top: 10px;
     right: 10px;
@@ -2189,7 +2189,7 @@ display: none;
     font-size: 20px;
     cursor: pointer;
 }
-.showpopup{
+.showpopup,.showpopup360{
     display: none;
 }
 
@@ -2199,13 +2199,13 @@ display: none;
 
 
 @media only screen and  (max-width: 600px) {
-    .showpopup{
+   .showpopup, .showpopup360{
         display: block;
     }
-
+    
 
     
-.open-popup-btn-earanatomy {
+.open-popup-btn-earanatomy, .open-popup-btn-360 {
     display: block;
 }
 
