--- a/styles/styles.css
+++ b/styles/styles.css
@@ -2132,6 +2132,28 @@ display: none;
 
 
 
+.open-popup-btn-earanatomy-kids{
+    display: block;
+    margin: 20px auto;
+    padding: 10px 20px;
+    font-size: 16px;
+    cursor: pointer;
+ background: linear-gradient(180deg, #f6ebff, #8a2be2);
+    border-radius: 15%;
+    border: none;
+    color: white;
+    padding: 14px 28px;
+    left: 4%;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 1.5rem;
+    border-radius: 18px;
+    cursor: pointer;
+    transition: background-color 0.3s ease, transform 0.3s ease;
+}
+
+
 
 
 
