--- a/styles/styles.css
+++ b/styles/styles.css
@@ -3275,6 +3275,10 @@ width: 38%;
 
 
 
+
+
+
+
 /*  מידע לטסים */
 
 
@@ -3364,7 +3368,26 @@ width: 38%;
 
 
 
-
+.open-popup-btn-earanatomy-fly, .open-popup-btn-360-fly, .open-popup-btn-stepbystep-fly {
+    display: block;
+    margin: 20px auto;
+    padding: 10px 20px;
+    font-size: 16px;
+    cursor: pointer;
+ background: linear-gradient(180deg, #f6ebff, #8a2be2);
+    border-radius: 15%;
+    border: none;
+    color: white;
+    padding: 14px 28px;
+    left: 4%;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 1.5rem;
+    border-radius: 18px;
+    cursor: pointer;
+    transition: background-color 0.3s ease, transform 0.3s ease;
+}
 
 
 
