--- a/styles/styles.css
+++ b/styles/styles.css
@@ -2172,7 +2172,7 @@ display: none;
     padding: 10px 20px;
     font-size: 16px;
     cursor: pointer;
- background: linear-gradient(180deg, #f6ebff, #8a2be2);
+background: linear-gradient(180deg, #fff4ea, #ffa500);
     border-radius: 15%;
     border: none;
     color: white;
