--- a/styles/styles.css
+++ b/styles/styles.css
@@ -2166,7 +2166,7 @@ display: none;
 }
 
 
-.open-popup-btn-earanatomy-fly, .open-popup-btn-360-fly{
+.open-popup-btn-earanatomy-fly, .open-popup-btn-360-fly, .open-popup-btn-stepbystep-fly{
       display: block;
     margin: 20px auto;
     padding: 10px 20px;
