--- a/styles/styles.css
+++ b/styles/styles.css
@@ -3654,6 +3654,37 @@ height: auto;
     }
 }
 
+
+
+.open-popup-btn-earanatomy-sw, .open-popup-btn-360-sw, .open-popup-btn-stepbystep-sw{
+      display: block;
+    margin: 20px auto;
+    padding: 10px 20px;
+    font-size: 16px;
+    cursor: pointer;
+    background: linear-gradient(180deg, #bfeff5, #0b8492);
+    border-radius: 15%;
+    border: none;
+    color: white;
+    padding: 14px 28px;
+    left: 4%;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 1.5rem;
+    border-radius: 18px;
+    cursor: pointer;
+    transition: background-color 0.3s ease, transform 0.3s ease;
+}
+ 
+
+
+
+
+
+
+
+
 /*  מבוגרים */
 
 .chosenCat-image-ad{
