--- a/styles/styles.css
+++ b/styles/styles.css
@@ -3303,7 +3303,7 @@ width: 38%;
        background-color: #fff4ea;
     border-radius: 4%;
     padding: 2%;
-    margin-right: -6%;
+/*     margin-right: -6%; */
     }
 
 .flighters-opening-section ul{
