--- a/styles/styles.css
+++ b/styles/styles.css
@@ -3553,7 +3553,7 @@ height: auto;
         background-color: #bfeff5;
         border-radius: 4%;
         padding: 2%;
-        margin-right: -6%;
+/*         margin-right: -6%; */
     }
     .flex-container-opening-swim h1 {
     text-align: center;
