--- a/styles/styles.css
+++ b/styles/styles.css
@@ -3120,11 +3120,15 @@ font-size: 1rem;
     }
 
     .parent-info-buttons, .parent-info-buttons-research {
-    display: none;
+    display: block;
+        position: relative;
+        right: -26%;
     }
 
     .parent-info-buttons-research {
-        display: none;
+       display: block;
+        position: relative;
+        right: -24%;
 
     }
 }
