--- a/styles/styles.css
+++ b/styles/styles.css
@@ -523,6 +523,7 @@ transition: opacity 0.8s ease-out, transform 0.8s ease-out;
     .list{
         gap: 32px;
         padding-bottom: 8%;
+            background-position-y: 46%;
     }
 
 
