--- a/styles/styles.css
+++ b/styles/styles.css
@@ -3135,12 +3135,14 @@ width: 10%;
     display: block;
     position: relative;
     right: -27%;
+         
     }
 
     .parent-info-buttons-research {
        display: block;
         position: relative;
         right: -24%;
+        width: 17%;
 
     }
 }
