--- a/styles/styles.css
+++ b/styles/styles.css
@@ -3923,6 +3923,7 @@ margin-top: 1%;
 
 
     .content-adinfo {
+        text-align: right;
         font-size: 0.75rem;
         display: none;
         transition: max-height 0.5s ease, opacity 0.5s ease; 
