--- a/styles/styles.css
+++ b/styles/styles.css
@@ -2309,10 +2309,10 @@ background: linear-gradient(180deg, #fff4ea, #ffa500);
 }
 
 
-    #video-iframe{
+/*     #video-iframe{
         height: 100%;
     }
-
+ */
 
 @media only screen and  (max-width: 600px) {
 
