--- a/styles/styles.css
+++ b/styles/styles.css
@@ -44,9 +44,10 @@
 
 .web-logo{
    
-    position: relative;
-    
-    padding: 3%;
+position: relative;
+    /* padding: 3%; */
+    width: 133%;
+    left: 66%;
 }
 
 .web-icon{
