--- a/styles/styles.css
+++ b/styles/styles.css
@@ -43,11 +43,10 @@
 
 
 .web-logo{
-   
 position: relative;
-    /* padding: 3%; */
-    width: 133%;
-    left: 66%;
+    padding: 12%;
+    width: 118%;
+    left: 96%;
 }
 
 .web-icon{
