--- a/styles/styles.css
+++ b/styles/styles.css
@@ -66,7 +66,22 @@ position: fixed;
 
 @media screen and (max-width: 600px) {
     #scrollUpBtn {
-    width: 13%;}
+    position: fixed;
+    width: 4%;
+    bottom: 20px;
+    right: 20px;
+    transform: rotate(90deg);
+    font-family: verla ui-rounded;
+    display: none;
+    background-color: #3cc5e9;
+    color: white;
+    border: none;
+    padding: 15px;
+    border-radius: 27%;
+    cursor: pointer;
+    z-index: 1000;
+    font-size: 19px;
+    }
 }
 
 
